fully fledged aunthenticated system

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "daraja api",
   "main": "index.js",
   "scripts": {
-    "nodemon": "nodemon node_modules/index"
+    "nodemon": "nodemon node_modules/index",
+    "start": "node index.js"
   },
   "keywords": [
     "mpesa",
